
	- 

	- Fixed the round robin pairing algorithm to work much better no matter how
	  many debaters you fling at it.

	- Switching a student will now also switch their code designation for non
	  numerical coded events.

	- The Panel Force Edit Results screen now shows any rfds and comments the
	  judge may have entered as well as results.

	- Implemented the Sloat Method of recoding entries randomly by school where
	  the school order is itself random for each event.

	- Added a little indicator on how many ballots are not entered to the
	  schematic

	- Added the pending ballot report to the schematic.

	- Fixed the debate packet report to better report results from prelims with
	  panels instead of single judges.

	- Added a report to print pending ballots to send runners out to find and
	  beat people who haven't submitted ballots.

	- Fixed an issue where the team position for WUDC events was not being set
	  correctly.

==CHANGES RELEASED 11.19.2013==

	- Fixed a problem with sweepstakes where limits on number of entries was
	  only respected when sweepstakes sets are stacked two-high, not deeper.

	- Added a feature where placement of ADA accessible rooms relies on a
	  separate setting, not the quality setting, since they're not always the
	  same.

	- Tweaked the down-and-out setting to aim for mutuality while caring not
	  one whit about quality.

	- Added a setting to specify what rating you want unrated judges to count
	  as when pairing mutuality and preferences.  By default the system will
	  use 1.

	- Added the ability to set the flight for entries in double flighted
	  events.  The paneler and judge assigner make this a rather low priority,
	  so if two debaters in opposite flights both get flight 2, one will be
	  nonetheless assigned to flight 1.

	- Improved the unused-judge swapper to be aware of elim round panels and to
	  display existing judges' prefs where they exist.
