@@ -6,6 +6,8 @@
 </%args>
 <%init>
 
+	$m->redirect("http://www.tabroom.com") unless $url;
+
 	use PHP::Serialization;
 	use MIME::Base64;
 	use Crypt::Rijndael;
@@ -15,9 +17,13 @@
 
 	my %cookies = Apache2::Cookie->fetch;
 
+	Tab::debuglog("Flurgle!");
+
 	unless ($cookies{'CHOCOLATECHIP'}) {
 		$m->redirect("$Tab::url_prefix/user/login/dechoc.mhtml?url=$url");
 	}
+
+	Tab::debuglog("Flimmer!");
 
 	my $serialized_data = $cookies{'CHOCOLATECHIP'}->value;
 
@@ -45,6 +51,7 @@
 
 	my $account = shift @site_accounts if @site_accounts;
 
+
 	unless ($account) { 
 	
 		my @email_accounts = Tab::Account->search( email => $email );
@@ -59,7 +66,7 @@
 
 			my ($first, $last) = split (/\ /, $name);
 			$account = Tab::Account->create({ 
-				username     => $email,
+				email        => $email,
 				idebate_site => $site
 			});
 
